# cover-agent

cover_agent/: CoverAgent.py  CoverageProcessor.py  UnitTestGenerator.py  main.py
templated_tests/c_cli/: Dockerfile  README.md  run_tests_and_coverage.sh  test_calc.c
templated_tests/cpp_cli/: CMakeLists.txt  Dockerfile  main.cpp  test_calculator.cpp
templated_tests/python_fastapi/: README.md  app.py  test_recurse.py
templated_tests/python_fastapi/services/: root_service.py
tests/: test_CoverageProcessor.py
tests_integration/: test_all.sh
